--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-# Virtual environment
+# Virtual environments
 venv/
 .venv/
+.venv-win/
+env/
+.env/
+ENV/
 
 # Assets (test images, sounds)
 assets/
@@ -9,10 +13,38 @@ assets/
 __pycache__/
 *.py[cod]
 *.pyo
+*.pyd
+.Python
+build/
+dist/
+*.egg-info/
+*.egg
+.eggs/
+*.manifest
+*.spec
 
-# Windows artifacts
-*:Zone.Identifier
+# Environment variables
+.env
+.env.local
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+*:Zone.Identifier
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Jupyter
+.ipynb_checkpoints/
