Updated README to include demo GIF and tray menu screenshot, updated .gitignore to include the .spec configuration file for PyInstasller.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ dist/
 *.egg
 .eggs/
 *.manifest
-*.spec
+# *.spec  # Keep stopnailbiting.spec for PyInstaller builds
 
 # Environment variables
 .env
