Added pause media when alert flahes feature, also polished the shutdown handling when running through tscript.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ pyinstaller
 pystray
 Pillow
 screeninfo
+winrt-Windows.Media.Control
+winrt-Windows.Foundation
+winrt-Windows.Foundation.Collections
